# kw2kpass

./: .clang-format  .gitignore  .gitmodules  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  cli.py  entry_data.py  keepass.pyi  keepass_utils.py  kw2kpass.py  kwallet.pyi  pyproject.toml  test_wallet.pyi  wallet_utils.py
build-baseline/: CMakeCache.txt
readKwallet/: CMakeLists.txt
readKwallet/include/: WalletHandle  wallethandle.hpp
readKwallet/src/: readKwallet.cpp  wallethandle.cpp  wrap_pybind.cpp  wrap_pybind_kw.cpp
tests/: CMakeLists.txt
tests/cli_options/: CMakeLists.txt  run_cli_options.py
tests/test_data/: kw2kpass_test  kw2kpass_test.xml
tests/translate_entry/: CMakeLists.txt  run_translate_entry.py
tests/wallethandle/: CMakeLists.txt  run_read_wallet_py.py  test_closed_wallet.cpp  test_read_wallet.cpp
tests/wallethandle/include/: TestReadWallet  test_read_wallet.hpp
tests/wallethandle/src/: test_closed_wallet.cpp  test_read_wallet.cpp  wrap_pybind_test_wallet.cpp
writeKeePass/: CMakeLists.txt  wrap_pybind_kp.cpp
