
######################################
# Include the subdirectories         #
# to set up the unit tests.          #
#                                    #
# Go to these directories for        #
# further documentation.             #
######################################

add_subdirectory(cli_options)
add_subdirectory(wallethandle)
